# EGB

./: README.md
project-name/main/: CMakeLists.txt  main.c
project-name/main/include/: screens.c  screens.h  ui.c  ui.h  vars.h
